[gd_scene load_steps=7 format=3 uid="uid://c7tr16stbe2fn"]

[ext_resource type="Script" path="res://scripts/node_dragona_expecting.gd" id="1_xcfug"]
[ext_resource type="Texture2D" uid="uid://bmmkomcoq462v" path="res://sprites/npc/Dragon final all sprites.png" id="2_b7m3a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hs5ip"]
size = Vector2(275, 65)

[sub_resource type="Animation" id="Animation_iiw1o"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDragonaExpecting:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [15]
}

[sub_resource type="Animation" id="Animation_mtt30"]
resource_name = "dragona_activa"
length = 3.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDragonaExpecting:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51hbk"]
_data = {
"RESET": SubResource("Animation_iiw1o"),
"dragona_activa": SubResource("Animation_mtt30")
}

[node name="NodeDragona_expecting" type="Node2D"]
script = ExtResource("1_xcfug")
metadata/_edit_lock_ = true

[node name="SpriteDragonaExpecting" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_b7m3a")
hframes = 6
vframes = 3
frame = 15
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="SpriteDragonaExpecting"]
collision_layer = 0
collision_mask = 2
monitorable = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteDragonaExpecting/Area2D"]
position = Vector2(-195, 65)
shape = SubResource("RectangleShape2D_hs5ip")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["dragon_animation_expecting"]]
libraries = {
"": SubResource("AnimationLibrary_51hbk")
}
speed_scale = 1.5

[node name="Giro" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="SpriteDragonaExpecting/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SpriteDragonaExpecting/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Giro" to="." method="_on_giro_timeout"]
